@@ -95,9 +95,7 @@ CONFIG_BOARD_LOOPSPERMSEC=16717
 #
 # CONFIG_ARMV7M_TOOLCHAIN_ATOLLIC is not set
 # CONFIG_ARMV7M_TOOLCHAIN_BUILDROOT is not set
-# CONFIG_ARMV7M_TOOLCHAIN_CODEREDL is not set
 # CONFIG_ARMV7M_TOOLCHAIN_CODEREDW is not set
-# CONFIG_ARMV7M_TOOLCHAIN_CODESOURCERYL is not set
 CONFIG_ARMV7M_TOOLCHAIN_CODESOURCERYW=y
 # CONFIG_ARMV7M_TOOLCHAIN_DEVKITARM is not set
 # CONFIG_ARMV7M_TOOLCHAIN_GNU_EABI is not set
@@ -374,6 +372,7 @@ CONFIG_SPI_EXCHANGE=y
 # CONFIG_SERCOMM_CONSOLE is not set
 CONFIG_SERIAL=y
 # CONFIG_DEV_LOWCONSOLE is not set
+CONFIG_SERIAL_REMOVABLE=y
 # CONFIG_16550_UART is not set
 CONFIG_ARCH_HAVE_USART2=y
 CONFIG_MCU_SERIAL=y
@@ -458,6 +457,7 @@ CONFIG_CDCACM_PRODUCTSTR="CDC/ACM Serial"
 #
 # System Logging
 #
+# CONFIG_SYSLOG_ENABLE is not set
 CONFIG_SYSLOG=y
 CONFIG_SYSLOG_CHAR=y
 CONFIG_SYSLOG_DEVPATH="/dev/ttyS0"
@@ -686,6 +686,10 @@ CONFIG_NSH_NESTDEPTH=3
 # CONFIG_NSH_DISABLEBG is not set
 CONFIG_NSH_CONSOLE=y
 # CONFIG_NSH_USBCONSOLE is not set
+
+#
+# USB Trace Support
+#
 # CONFIG_NSH_CONDEV is not set
 CONFIG_NSH_ARCHINIT=y
 
@@ -736,3 +740,7 @@ CONFIG_READLINE_ECHO=y
 # Sysinfo
 #
 # CONFIG_SYSTEM_SYSINFO is not set
+
+#
+# USB Monitor
+#
